# mkl_cmake

./: CMakeLists.txt  build.bat
include/: mkl.c
src/: CMakeLists.txt  mkl_demo.cpp
